--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Hanalei+Fill&family=Yellowtail&display=swap" rel="stylesheet">
+    <meta name="google-site-verification" content="xbADMZt8SH6rTe0ov-E96NoC61r4T262sPrUNN4HjVM" />
 </head>
 
 <body>
